...
      ),
      body: ListView(
        children: [
          ListTile(
            leading: SvgPicture.asset('assets/icons/discover2.svg'),
            title: Text(
              'Static pages',
              style: Theme.of(context).textTheme.headlineSmall,
            ),
            trailing: const Icon(Icons.chevron_right),
            onTap: () => context.go(Routes.discoverStatic),
          ),
          const Divider(),
...
              colorFilter: colorFilter,
            ),
            trailing: const Icon(Icons.chevron_right),
            onTap: () {
              const link = Link(
                id: '0',
                name: 'Discover',
                link: 'https://uat-links.devtest.vegas/discover',
                path: Constants.discoverPath,
              );
              context.pushNamed(
                Routes.createPageDeepLink,
                extra: link,
...
            title: const Text('Restaurants'),
            trailing: const Icon(Icons.chevron_right),
            onTap: () => context.go(Routes.restaurants),
          ),
          ListTile(
            leading: SvgPicture.asset(IconAssets.entertainment),
            title: const Text('Shows'),
            trailing: const Icon(Icons.chevron_right),
            onTap: () => context.go(Routes.shows),
          ),
          ListTile(
            title: const Text('Clubs'),
            leading: SvgPicture.asset(IconAssets.nightlife),
...
