...
            trailing: const Icon(Icons.chevron_right),
            onTap: () => context.go(Routes.createDeepLink),
          ),
          const Divider(),
          ListTile(
            leading: SvgPicture.asset(IconAssets.discover),
            title: const Text('Discover'),
            trailing: const Icon(Icons.chevron_right),
            onTap: () => context.go(Routes.discover),
          ),
          const Divider(),
          ListTile(
            leading: SvgPicture.asset(IconAssets.trips),
...
            trailing: const Icon(Icons.chevron_right),
            onTap: () => context.go(Routes.trips),
          ),
          const Divider(),
          ListTile(
            leading: SvgPicture.asset(IconAssets.rewards),
            title: const Text('Rewards'),
            trailing: const Icon(Icons.chevron_right),
            onTap: () => context.go(Routes.rewards),
          ),
          const Divider(),
          ListTile(
            leading: SvgPicture.asset(IconAssets.rewards),
...
